# motivated_learning

./: .gitignore  LICENSE  README.md  TODO.md  packages_to_install.sh
bringup/: CMakeLists.txt  package.xml
bringup/launch/: main.launch  simulation.launch  start.launch
bringup/script/: kill.sh
commons/: CMakeLists.txt  package.xml
commons/config/: logger_levels.config  python_logger.config
commons/include/commons/: commons.hpp
commons/msg/: Action.msg
environment/: CMakeLists.txt  package.xml  setup.py
environment/data/: map_fields.txt
environment/scripts/: global_map_manager_node.py
environment/scripts/environment/: chargers_manager.py  global_map_manager.py
environment/src/environment/: chargers_manager.py  gazebo_client.py  global_map_manager.py
gazebo_plugins_gui/: CMakeLists.txt  ExampleSpawnWidget.cc  ExampleSpawnWidget.hh  GUIExampleTimeWidget.cpp  GUIExampleTimeWidget.hpp  package.xml  pain_dashboard.cpp  pain_dashboard.hpp
goal_creation_system/: CMakeLists.txt  package.xml
goal_creation_system/src/: goal_creation_system_node.cpp
logging/: CMakeLists.txt  package.xml
logging/scripts/: logging_pains.py  main.py  visualize_pains.py
robot/: CMakeLists.txt  package.xml  setup.py
robot/include/turtlebot3_robot/: turtlebot3_robot.hpp
robot/launch/: go_to_grid_action_server.launch
robot/scripts/: agent.py  go_to_grid_cell_client.py  go_to_grid_cell_server.py  go_to_grid_cell_service.py  main.py  movement_manager_node.py  neurons.py  update_agent_grid_coord.py  update_robot_state.py
robot/scripts/robot/: agent.py  update_agent_grid_coord.py
robot/src/robot/: agent.py  battery_manager.py  go_to_grid_cell_service.py  movement_manager.py  pains.py  robot_pose_manager.py
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/action/: GoToGridCell.action
robot_msgs/msg/: AgentStateMsg.msg  ChargerStateMsg.msg  ChargersMsg.msg  Field.msg  FieldMsg.msg  Map.msg  MapMsg.msg  PainsMsg.msg  PoseAndGridCoordsMsg.msg  Resources.msg  State.msg  StateMsg.msg
robot_msgs/srv/: GetChargerEnergy.srv  IsMoving.srv  SetGridGoal.srv
rqt_plugins/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_plugins/config/: dashboard.perspective  robot.perspective
rqt_plugins/resource/: AgentDashboard.ui  MyPlugin.ui
rqt_plugins/scripts/: rqt_agent_dashboard.py  rqt_mypkg.py
rqt_plugins/src/rqt_plugins/: agent_dashboard.py  agent_dashboard_widget.py  my_module.py
sensory_processing/: CMakeLists.txt  package.xml
sensory_processing/include/sensory_processing/: sensory_processing.hpp
sensory_processing/src/: sensory_processing.cpp  sensory_processing_node.cpp
simulation_map/: CMakeLists.txt  package.xml
simulation_map/scripts/: create_map.py  grid_cell.py  grid_map.py
some_pkg/: package.xml
start_scripts/: kill.sh  simulation.launch  start.launch  start.sh  test.launch
test_pkg/: package.xml
turtlebot3/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_for_open_manipulator.gazebo.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro
turtlebot3/turtlebot3_gazebo/: CMakeLists.txt
turtlebot3/turtlebot3_gazebo/launch/: empty_world.launch  start.launch
turtlebot3/turtlebot3_gazebo/models/charger/: model.config  model.sdf
turtlebot3/turtlebot3_gazebo/models/show_field/: model.sdf
turtlebot3/turtlebot3_gazebo/models/wheels_lubrication/: model.sdf
turtlebot3/turtlebot3_gazebo/worlds/: turtlebot3_world.world
turtlebot3/turtlebot3_navigation/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_navigation/launch/: move_base.launch
turtlebot3/turtlebot3_navigation/param/: base_local_planner_params.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml
turtlebot3/turtlebot3_navigation/rviz/: config.rviz
turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro
turtlebot3_gazebo/launch/: algorithms.launch  empty_world.launch  simulation.launch  start.launch  turtlebot3_empty_world.launch
turtlebot3_gazebo/models/charger/: model.sdf
turtlebot3_gazebo/models/normal_field/: model.config  model.sdf
turtlebot3_gazebo/models/show_field/: model.config
turtlebot3_gazebo/models/turtlebot3_square/: model.sdf
turtlebot3_gazebo/models/wheels_lubrication/: model.config
turtlebot3_gazebo/script/: kill.sh  start.sh
turtlebot3_gazebo/worlds/: empty.world  turtlebot3_world.world
turtlebot3_navigation/param/: costmap_common_params_waffle.yaml
turtlebot3_navigation/rviz/: config.rviz  my_config.rviz
turtlebot3_robot/: CMakeLists.txt  package.xml
turtlebot3_robot/include/turtlebot3_robot/: turtlebot3_robot.hpp
turtlebot3_robot/scripts/: main.py
turtlebot3_robot/src/: turtlebot3_robot.cpp  turtlebot3_robot_node.cpp
