<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.0</version>
  <description>The robot package</description>
  <maintainer email="bartlomiej.stycze@gmail.com">Bartlomiej Styczen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>commons</depend>
  <depend>robot_msgs</depend>

  <!-- <export> -->
  <!-- </export> -->
</package>
