<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_robot</name>
  <version>0.0.0</version>
  <description>The turtlebot3_robot package</description>
  <maintainer email="bartlomiej.stycze@gmail.com">Bartlomiej Styczen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>commons</depend>


  <!-- <export> -->
  <!-- </export> -->
</package>
